--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "convex": "^1.17.4",
+    "emoji-picker-react": "^4.12.0",
     "lucide-react": "^0.468.0",
     "next": "15.1.1",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-textarea-autosize": "^8.5.6",
     "sonner": "^1.7.1",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
